assmble run.sh notes